Kaggle Notebook | hull_tactical | Version 5

--- a/hull-tactical.ipynb
+++ b/hull-tactical.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa8e9acf",
+   "id": "e9acf1fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:46:07.813803Z",
-     "iopub.status.busy": "2025-09-22T09:46:07.813497Z",
-     "iopub.status.idle": "2025-09-22T09:46:11.439504Z",
-     "shell.execute_reply": "2025-09-22T09:46:11.438597Z"
+     "iopub.execute_input": "2025-09-22T09:48:24.269394Z",
+     "iopub.status.busy": "2025-09-22T09:48:24.269027Z",
+     "iopub.status.idle": "2025-09-22T09:48:28.441928Z",
+     "shell.execute_reply": "2025-09-22T09:48:28.440919Z"
     },
     "papermill": {
-     "duration": 3.631881,
-     "end_time": "2025-09-22T09:46:11.441224",
+     "duration": 4.179237,
+     "end_time": "2025-09-22T09:48:28.443976",
      "exception": false,
-     "start_time": "2025-09-22T09:46:07.809343",
+     "start_time": "2025-09-22T09:48:24.264739",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5cc90543",
+   "id": "a2be0b92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:46:11.447517Z",
-     "iopub.status.busy": "2025-09-22T09:46:11.447113Z",
-     "iopub.status.idle": "2025-09-22T09:46:11.832850Z",
-     "shell.execute_reply": "2025-09-22T09:46:11.831792Z"
+     "iopub.execute_input": "2025-09-22T09:48:28.451727Z",
+     "iopub.status.busy": "2025-09-22T09:48:28.451176Z",
+     "iopub.status.idle": "2025-09-22T09:48:28.826359Z",
+     "shell.execute_reply": "2025-09-22T09:48:28.825161Z"
     },
     "papermill": {
-     "duration": 0.390604,
-     "end_time": "2025-09-22T09:46:11.834702",
+     "duration": 0.380499,
+     "end_time": "2025-09-22T09:48:28.827860",
      "exception": false,
-     "start_time": "2025-09-22T09:46:11.444098",
+     "start_time": "2025-09-22T09:48:28.447361",
      "status": "completed"
     },
     "tags": []
@@ -299,19 +299,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3efd09ef",
+   "id": "b1b5221a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:46:11.841667Z",
-     "iopub.status.busy": "2025-09-22T09:46:11.841356Z",
-     "iopub.status.idle": "2025-09-22T09:46:11.925996Z",
-     "shell.execute_reply": "2025-09-22T09:46:11.925013Z"
+     "iopub.execute_input": "2025-09-22T09:48:28.835277Z",
+     "iopub.status.busy": "2025-09-22T09:48:28.834920Z",
+     "iopub.status.idle": "2025-09-22T09:48:28.907459Z",
+     "shell.execute_reply": "2025-09-22T09:48:28.906400Z"
     },
     "papermill": {
-     "duration": 0.090008,
-     "end_time": "2025-09-22T09:46:11.927641",
+     "duration": 0.078291,
+     "end_time": "2025-09-22T09:48:28.909276",
      "exception": false,
-     "start_time": "2025-09-22T09:46:11.837633",
+     "start_time": "2025-09-22T09:48:28.830985",
      "status": "completed"
     },
     "tags": []
@@ -362,19 +362,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bacda0e1",
+   "id": "0be0ce0b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:46:11.934848Z",
-     "iopub.status.busy": "2025-09-22T09:46:11.934524Z",
-     "iopub.status.idle": "2025-09-22T09:46:11.958202Z",
-     "shell.execute_reply": "2025-09-22T09:46:11.957278Z"
+     "iopub.execute_input": "2025-09-22T09:48:28.916735Z",
+     "iopub.status.busy": "2025-09-22T09:48:28.916386Z",
+     "iopub.status.idle": "2025-09-22T09:48:28.940250Z",
+     "shell.execute_reply": "2025-09-22T09:48:28.939042Z"
     },
     "papermill": {
-     "duration": 0.029018,
-     "end_time": "2025-09-22T09:46:11.959702",
+     "duration": 0.029593,
+     "end_time": "2025-09-22T09:48:28.941974",
      "exception": false,
-     "start_time": "2025-09-22T09:46:11.930684",
+     "start_time": "2025-09-22T09:48:28.912381",
      "status": "completed"
     },
     "tags": []
@@ -424,19 +424,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e954c99a",
+   "id": "9ff26ff2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:46:11.966857Z",
-     "iopub.status.busy": "2025-09-22T09:46:11.966119Z",
-     "iopub.status.idle": "2025-09-22T09:46:11.977924Z",
-     "shell.execute_reply": "2025-09-22T09:46:11.977059Z"
+     "iopub.execute_input": "2025-09-22T09:48:28.949588Z",
+     "iopub.status.busy": "2025-09-22T09:48:28.949259Z",
+     "iopub.status.idle": "2025-09-22T09:48:28.963756Z",
+     "shell.execute_reply": "2025-09-22T09:48:28.962453Z"
     },
     "papermill": {
-     "duration": 0.016678,
-     "end_time": "2025-09-22T09:46:11.979280",
+     "duration": 0.020427,
+     "end_time": "2025-09-22T09:48:28.965610",
      "exception": false,
-     "start_time": "2025-09-22T09:46:11.962602",
+     "start_time": "2025-09-22T09:48:28.945183",
      "status": "completed"
     },
     "tags": []
@@ -473,19 +473,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f10cb653",
+   "id": "e935f968",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:46:11.986065Z",
-     "iopub.status.busy": "2025-09-22T09:46:11.985798Z",
-     "iopub.status.idle": "2025-09-22T09:47:09.689484Z",
-     "shell.execute_reply": "2025-09-22T09:47:09.688597Z"
+     "iopub.execute_input": "2025-09-22T09:48:28.973131Z",
+     "iopub.status.busy": "2025-09-22T09:48:28.972800Z",
+     "iopub.status.idle": "2025-09-22T09:49:28.751491Z",
+     "shell.execute_reply": "2025-09-22T09:49:28.750486Z"
     },
     "papermill": {
-     "duration": 57.711613,
-     "end_time": "2025-09-22T09:47:09.693906",
+     "duration": 59.786846,
+     "end_time": "2025-09-22T09:49:28.755659",
      "exception": false,
-     "start_time": "2025-09-22T09:46:11.982293",
+     "start_time": "2025-09-22T09:48:28.968813",
      "status": "completed"
     },
     "tags": []
@@ -653,19 +653,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "57e760ed",
+   "id": "229990df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:47:09.701298Z",
-     "iopub.status.busy": "2025-09-22T09:47:09.700973Z",
-     "iopub.status.idle": "2025-09-22T09:47:09.898043Z",
-     "shell.execute_reply": "2025-09-22T09:47:09.897254Z"
+     "iopub.execute_input": "2025-09-22T09:49:28.763667Z",
+     "iopub.status.busy": "2025-09-22T09:49:28.763295Z",
+     "iopub.status.idle": "2025-09-22T09:49:29.006449Z",
+     "shell.execute_reply": "2025-09-22T09:49:29.005243Z"
     },
     "papermill": {
-     "duration": 0.202408,
-     "end_time": "2025-09-22T09:47:09.899394",
+     "duration": 0.249396,
+     "end_time": "2025-09-22T09:49:29.008278",
      "exception": false,
-     "start_time": "2025-09-22T09:47:09.696986",
+     "start_time": "2025-09-22T09:49:28.758882",
      "status": "completed"
     },
     "tags": []
@@ -761,19 +761,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5509960a",
+   "id": "08fdee30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T09:47:09.906849Z",
-     "iopub.status.busy": "2025-09-22T09:47:09.906521Z",
-     "iopub.status.idle": "2025-09-22T09:47:09.989129Z",
-     "shell.execute_reply": "2025-09-22T09:47:09.988188Z"
+     "iopub.execute_input": "2025-09-22T09:49:29.017411Z",
+     "iopub.status.busy": "2025-09-22T09:49:29.016911Z",
+     "iopub.status.idle": "2025-09-22T09:49:29.128597Z",
+     "shell.execute_reply": "2025-09-22T09:49:29.127344Z"
     },
     "papermill": {
-     "duration": 0.087937,
-     "end_time": "2025-09-22T09:47:09.990568",
+     "duration": 0.118591,
+     "end_time": "2025-09-22T09:49:29.130506",
      "exception": false,
-     "start_time": "2025-09-22T09:47:09.902631",
+     "start_time": "2025-09-22T09:49:29.011915",
      "status": "completed"
     },
     "tags": []
@@ -783,7 +783,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working dir files: ['__notebook__.ipynb', 'submission.parquet', 'model_scores.csv']\n",
+      "Working dir files: ['submission.parquet', '__notebook__.ipynb', 'model_scores.csv']\n",
       "   model    split      rmse       mae  sharpe_like\n",
       "0  ridge    train  0.000353  0.000052     0.042335\n",
       "1  ridge    valid  0.000137  0.000130     0.154588\n",
@@ -809,13 +809,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2057b016",
+   "id": "0454ad5e",
    "metadata": {
     "papermill": {
-     "duration": 0.002864,
-     "end_time": "2025-09-22T09:47:09.996888",
+     "duration": 0.003123,
+     "end_time": "2025-09-22T09:49:29.137387",
      "exception": false,
-     "start_time": "2025-09-22T09:47:09.994024",
+     "start_time": "2025-09-22T09:49:29.134264",
      "status": "completed"
     },
     "tags": []
@@ -859,14 +859,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 67.907081,
-   "end_time": "2025-09-22T09:47:10.619292",
+   "duration": 71.20067,
+   "end_time": "2025-09-22T09:49:29.862007",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-22T09:46:02.712211",
+   "start_time": "2025-09-22T09:48:18.661337",
    "version": "2.6.0"
   }
  },
