Kaggle Notebook | hull_tactical | Version 10

--- a/hull-tactical.ipynb
+++ b/hull-tactical.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4c40b1fd",
+   "id": "7ce5b2bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T10:09:45.806920Z",
-     "iopub.status.busy": "2025-09-22T10:09:45.806611Z",
-     "iopub.status.idle": "2025-09-22T10:09:51.171510Z",
-     "shell.execute_reply": "2025-09-22T10:09:51.170419Z"
+     "iopub.execute_input": "2025-09-22T10:23:04.769096Z",
+     "iopub.status.busy": "2025-09-22T10:23:04.768789Z",
+     "iopub.status.idle": "2025-09-22T10:23:08.569586Z",
+     "shell.execute_reply": "2025-09-22T10:23:08.568556Z"
     },
     "papermill": {
-     "duration": 5.370595,
-     "end_time": "2025-09-22T10:09:51.173382",
+     "duration": 3.806263,
+     "end_time": "2025-09-22T10:23:08.571367",
      "exception": false,
-     "start_time": "2025-09-22T10:09:45.802787",
+     "start_time": "2025-09-22T10:23:04.765104",
      "status": "completed"
     },
     "tags": []
@@ -25,7 +25,6 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import polars as pl\n",
     "\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
@@ -34,14 +33,11 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "\n",
-    "import kaggle_evaluation.default_inference_server\n",
-    "\n",
     "RANDOM_STATE = 42\n",
     "np.random.seed(RANDOM_STATE)\n",
     "\n",
     "INPUT_DIR = '/kaggle/input/hull-tactical-market-prediction'\n",
-    "TARGET = 'forward_returns'\n",
-    "TARGETS = ['forward_returns','risk_free_rate','market_forward_excess_returns']\n",
+    "WORK_DIR = '/kaggle/working'\n",
     "\n",
     "def log(msg):\n",
     "    print(f'[LOG] {msg}')"
@@ -50,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ca4241ca",
+   "id": "e32fa6ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T10:09:51.180681Z",
-     "iopub.status.busy": "2025-09-22T10:09:51.180098Z",
-     "iopub.status.idle": "2025-09-22T10:09:51.644314Z",
-     "shell.execute_reply": "2025-09-22T10:09:51.642840Z"
+     "iopub.execute_input": "2025-09-22T10:23:08.577144Z",
+     "iopub.status.busy": "2025-09-22T10:23:08.576725Z",
+     "iopub.status.idle": "2025-09-22T10:23:08.928425Z",
+     "shell.execute_reply": "2025-09-22T10:23:08.927450Z"
     },
     "papermill": {
-     "duration": 0.469605,
-     "end_time": "2025-09-22T10:09:51.646136",
+     "duration": 0.355987,
+     "end_time": "2025-09-22T10:23:08.929899",
      "exception": false,
-     "start_time": "2025-09-22T10:09:51.176531",
+     "start_time": "2025-09-22T10:23:08.573912",
      "status": "completed"
     },
     "tags": []
@@ -92,19 +88,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0345360",
+   "id": "0c476d06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T10:09:51.651881Z",
-     "iopub.status.busy": "2025-09-22T10:09:51.651569Z",
-     "iopub.status.idle": "2025-09-22T10:09:51.675349Z",
-     "shell.execute_reply": "2025-09-22T10:09:51.674334Z"
+     "iopub.execute_input": "2025-09-22T10:23:08.935492Z",
+     "iopub.status.busy": "2025-09-22T10:23:08.934766Z",
+     "iopub.status.idle": "2025-09-22T10:23:08.956240Z",
+     "shell.execute_reply": "2025-09-22T10:23:08.955194Z"
     },
     "papermill": {
-     "duration": 0.02839,
-     "end_time": "2025-09-22T10:09:51.676920",
+     "duration": 0.025775,
+     "end_time": "2025-09-22T10:23:08.957805",
      "exception": false,
-     "start_time": "2025-09-22T10:09:51.648530",
+     "start_time": "2025-09-22T10:23:08.932030",
      "status": "completed"
     },
     "tags": []
@@ -115,37 +111,42 @@
      "output_type": "stream",
      "text": [
       "[LOG] Feature count: 95\n",
-      "[LOG] X train shape: (8990, 95)\n"
+      "[LOG] X_all: (8990, 95), y_all: (8990,)\n"
      ]
     }
    ],
    "source": [
-    "common_feats = [c for c in train.columns if c in test.columns and c not in TARGETS]\n",
-    "feature_cols = common_feats.copy()\n",
+    "TARGET = 'forward_returns'\n",
+    "TARGETS = ['forward_returns','risk_free_rate','market_forward_excess_returns']\n",
+    "\n",
+    "# Strict intersection of non-target columns present in both train and test\n",
+    "feature_cols = [c for c in train.columns if c in test.columns and c not in TARGETS]\n",
     "log(f'Feature count: {len(feature_cols)}')\n",
     "\n",
+    "# Keep only rows with target for training\n",
     "train2 = train.dropna(subset=[TARGET]).reset_index(drop=True)\n",
-    "X = train2[feature_cols]\n",
-    "y = train2[TARGET]\n",
-    "log(f'X train shape: {X.shape}')"
+    "\n",
+    "X_all = train2[feature_cols]\n",
+    "y_all = train2[TARGET]\n",
+    "log(f'X_all: {X_all.shape}, y_all: {y_all.shape}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9445a515",
+   "id": "7df7b3cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T10:09:51.682756Z",
-     "iopub.status.busy": "2025-09-22T10:09:51.682481Z",
-     "iopub.status.idle": "2025-09-22T10:10:31.171164Z",
-     "shell.execute_reply": "2025-09-22T10:10:31.170221Z"
+     "iopub.execute_input": "2025-09-22T10:23:08.963161Z",
+     "iopub.status.busy": "2025-09-22T10:23:08.962869Z",
+     "iopub.status.idle": "2025-09-22T10:23:44.840817Z",
+     "shell.execute_reply": "2025-09-22T10:23:44.840000Z"
     },
     "papermill": {
-     "duration": 39.495175,
-     "end_time": "2025-09-22T10:10:31.174414",
+     "duration": 35.884063,
+     "end_time": "2025-09-22T10:23:44.844023",
      "exception": false,
-     "start_time": "2025-09-22T10:09:51.679239",
+     "start_time": "2025-09-22T10:23:08.959960",
      "status": "completed"
     },
     "tags": []
@@ -155,8 +156,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LOG] Holdout RMSE/MAE: {'ridge': (0.009138127076919871, 0.006478569295320791), 'elasticnet': (0.009148017646183906, 0.006474974665647242), 'rf': (0.008933626798736154, 0.006399406331208841)}\n",
-      "[LOG] Chosen model: ridge\n"
+      "[LOG] Split shapes -> train=(8540, 95), holdout=(450, 95)\n",
+      "[LOG] Holdout RMSE/MAE: {'ridge': (0.009322029894664532, 0.006558694667787884), 'elasticnet': (0.009271981228999667, 0.0065077495709852115), 'rf': (0.009203966168133421, 0.006498452952488181)}\n",
+      "[LOG] Chosen model: elasticnet\n"
      ]
     }
    ],
@@ -178,26 +180,29 @@
     "    ('model', RandomForestRegressor(n_estimators=300, max_depth=8, random_state=RANDOM_STATE, n_jobs=-1))\n",
     "])\n",
     "\n",
-    "ridge_pipe.fit(X, y)\n",
-    "en_pipe.fit(X, y)\n",
-    "rf_pipe.fit(X, y)\n",
-    "\n",
-    "#  time split (95/5)\n",
+    "#  95% train, 5% holdout\n",
     "n = len(train2)\n",
     "cut = max(1, int(n*0.95))\n",
     "Xtr, ytr = train2.iloc[:cut][feature_cols], train2.iloc[:cut][TARGET]\n",
     "Xho, yho = train2.iloc[cut:][feature_cols], train2.iloc[cut:][TARGET]\n",
+    "log(f'Split shapes -> train={Xtr.shape}, holdout={Xho.shape}')\n",
+    "\n",
+    "\n",
+    "ridge_pipe.fit(Xtr, ytr)\n",
+    "en_pipe.fit(Xtr, ytr)\n",
+    "rf_pipe.fit(Xtr, ytr)\n",
     "\n",
     "def rmse(y, p): \n",
     "    return np.sqrt(mean_squared_error(y, p))\n",
-    "def eval_model(m, Xv, yv):\n",
+    "def score_model(m, Xv, yv):\n",
     "    p = m.predict(Xv)\n",
     "    return rmse(yv, p), mean_absolute_error(yv, p)\n",
     "\n",
-    "scores = {}\n",
-    "for name, m in [('ridge', ridge_pipe), ('elasticnet', en_pipe), ('rf', rf_pipe)]:\n",
-    "    r, a = eval_model(m, Xho, yho)\n",
-    "    scores[name] = (r, a)\n",
+    "scores = { \n",
+    "    'ridge': score_model(ridge_pipe, Xho, yho), \n",
+    "    'elasticnet': score_model(en_pipe, Xho, yho),\n",
+    "    'rf': score_model(rf_pipe, Xho, yho)\n",
+    "}\n",
     "log(f'Holdout RMSE/MAE: {scores}')\n",
     "\n",
     "best_model = ridge_pipe if scores['ridge'][0] <= scores['elasticnet'][0] else en_pipe\n",
@@ -208,76 +213,72 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8c346a59",
+   "id": "0e3d9dc6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-22T10:10:31.180621Z",
-     "iopub.status.busy": "2025-09-22T10:10:31.179877Z",
-     "iopub.status.idle": "2025-09-22T10:10:31.184955Z",
-     "shell.execute_reply": "2025-09-22T10:10:31.184017Z"
+     "iopub.execute_input": "2025-09-22T10:23:44.849317Z",
+     "iopub.status.busy": "2025-09-22T10:23:44.848998Z",
+     "iopub.status.idle": "2025-09-22T10:23:45.079935Z",
+     "shell.execute_reply": "2025-09-22T10:23:45.078951Z"
     },
     "papermill": {
-     "duration": 0.009632,
-     "end_time": "2025-09-22T10:10:31.186389",
+     "duration": 0.23528,
+     "end_time": "2025-09-22T10:23:45.081459",
      "exception": false,
-     "start_time": "2025-09-22T10:10:31.176757",
+     "start_time": "2025-09-22T10:23:44.846179",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   date_id  forward_returns\n",
+      "0     8980         0.002101\n",
+      "1     8981         0.002599\n",
+      "2     8982         0.002401\n",
+      "3     8983         0.001971\n",
+      "4     8984         0.003098\n",
+      "Working dir files: ['submission.parquet', '__notebook__.ipynb']\n"
+     ]
+    }
+   ],
    "source": [
-    "trained_cols = feature_cols.copy()\n",
+    "Xtest = test[feature_cols]\n",
     "\n",
-    "def predict(test: pl.DataFrame):\n",
-    "    batch = test.to_pandas()\n",
+    "pred_main = best_model.predict(Xtest)\n",
     "\n",
-    "    Xb = batch.reindex(columns=trained_cols, fill_value=np.nan)\n",
+    "other = en_pipe if best_model is ridge_pipe else ridge_pipe\n",
+    "pred_other = other.predict(Xtest)\n",
+    "pred = 0.6*pred_main + 0.4*pred_other\n",
     "\n",
-    "    preds = best_model.predict(Xb)\n",
-    "    return pl.DataFrame({'forward_returns': preds})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a1fb8883",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-09-22T10:10:31.192021Z",
-     "iopub.status.busy": "2025-09-22T10:10:31.191755Z",
-     "iopub.status.idle": "2025-09-22T10:10:31.713331Z",
-     "shell.execute_reply": "2025-09-22T10:10:31.712356Z"
-    },
-    "papermill": {
-     "duration": 0.526233,
-     "end_time": "2025-09-22T10:10:31.714976",
-     "exception": false,
-     "start_time": "2025-09-22T10:10:31.188743",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "inference_server = kaggle_evaluation.default_inference_server.DefaultInferenceServer(predict)\n",
+    "submission = pd.DataFrame({\n",
+    "    'date_id': test['date_id'].values,\n",
+    "    'forward_returns': pred\n",
+    "})\n",
     "\n",
-    "if os.getenv('KAGGLE_IS_COMPETITION_RERUN'):\n",
-    "    inference_server.serve()\n",
-    "else:\n",
-    "    inference_server.run_local_gateway((INPUT_DIR,))\n"
+    "if has_is_scored:\n",
+    "    mask = test['is_scored'].values.astype(bool)\n",
+    "    submission = submission[mask]\n",
+    "\n",
+    "submission.to_parquet('submission.parquet', index=False)\n",
+    "\n",
+    "print(submission.head())\n",
+    "print('Working dir files:', os.listdir(WORK_DIR))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21035d59",
+   "id": "1a3b00f3",
    "metadata": {
     "papermill": {
-     "duration": 0.001946,
-     "end_time": "2025-09-22T10:10:31.719295",
+     "duration": 0.001889,
+     "end_time": "2025-09-22T10:23:45.085583",
      "exception": false,
-     "start_time": "2025-09-22T10:10:31.717349",
+     "start_time": "2025-09-22T10:23:45.083694",
      "status": "completed"
     },
     "tags": []
@@ -321,14 +322,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 52.567422,
-   "end_time": "2025-09-22T10:10:32.542551",
+   "duration": 45.946451,
+   "end_time": "2025-09-22T10:23:45.706466",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-22T10:09:39.975129",
+   "start_time": "2025-09-22T10:22:59.760015",
    "version": "2.6.0"
   }
  },
